# tuteditor

./: .gitignore  PLAN.md  README.md  SPEC.md  TASKS.md  alembic.ini  conftest.py  main.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml
alembic/: env.py
alembic/versions/: 20260320_0001_init_schema.py
app/: config.py  db.py  deps.py  main.py  schemas.py  store.py
app/api/: hint_routes.py  message_routes.py  router.py  session_routes.py  snapshot_routes.py  thread_routes.py  workspace_routes.py
app/models/: __init__.py  code_snapshot.py  conversation.py  hint.py  session.py  task_context.py
app/schemas/: __init__.py  common.py  hint.py  session.py  snapshot.py  task_context.py  thread.py
app/services/: errors.py  hint_service.py  message_service.py  session_service.py  snapshot_service.py  thread_service.py  workspace_service.py
app/templates/: workspace.html
app/tutor/: adapter.py  any_llm_adapter.py  fake_adapter.py  payload_builder.py  policy.py  types.py
prompts/implementation/: SPEC.md
prompts/plan/: PLAN.md  TASKS.md  TESTPLAN.md
prompts/research/: RESEARCH.MD
scripts/: smoke_mvp.sh
tests/: conftest.py  support.py
tests/api/: test_hints_api.py  test_messages_api.py  test_sessions_api.py  test_snapshots_api.py  test_threads_api.py  test_workspace_api.py
tests/guardrails/: test_invocation_surface.py
tests/ui/: test_workspace_interactions.spec.ts
tests/unit/: test_any_llm_adapter.py  test_hint_service.py  test_message_service.py  test_payload_builder.py  test_trigger_policy.py  test_tutor_adapter_selection.py
(+4 files in other folders)
