[project]
name = "tuteditor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.0",
    "any-llm-sdk>=0.8.0",
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "pydantic>=2.10.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=9.0.0",
]
